de.unihalle: r/7.x default WFs

--- a/7.x/de.unihalle/encoding/engage-movies-parallel.properties
+++ b/7.x/de.unihalle/encoding/engage-movies-parallel.properties
@@ -34,11 +34,41 @@ profile.parallel.http.suffix.medium-quality = -medium.mp4
 profile.parallel.http.suffix.high-quality = -high.mp4
 profile.parallel.http.suffix.hd-quality = -hd.mp4
 profile.parallel.http.ffmpeg.command = -i #{in.video.path} \
-  -c:v libx264 -filter:v yadif,scale=-2:288 -preset slower -crf 28 -r 25 -pix_fmt yuv420p -profile:v baseline -tune film -movflags faststart \
-  -c:a aac -ar 22050 -ac 1 -ab 32k #{out.dir}/#{out.name}#{out.suffix.low-quality} \
-  -c:v libx264 -filter:v yadif,scale=-2:360 -preset slower -crf 25 -r 25 -pix_fmt yuv420p -profile:v baseline -tune film -movflags faststart \
-  -c:a aac -ar 22050 -ac 1 -ab 48k #{out.dir}/#{out.name}#{out.suffix.medium-quality} \
-  -c:v libx264 -filter:v yadif,scale=-2:576 -preset medium -crf 23 -r 25 -pix_fmt yuv420p -tune film -movflags faststart \
-  -c:a aac -ar 44100 -ab 96k #{out.dir}/#{out.name}#{out.suffix.high-quality} \
-  -c:v libx264 -filter:v yadif,scale=-2:720 -preset medium -crf 23 -r 25 -pix_fmt yuv420p -tune film -movflags faststart \
-  -c:a aac -ar 44100 -ab 96k #{out.dir}/#{out.name}#{out.suffix.hd-quality}
+  -c:v libx264 -crf 23 -maxrate 1200k -bufsize 2400k -profile:v high -level 4.0 -pix_fmt yuv420p \
+    -x264opts keyint=25:min-keyint=25:no-scenecut -movflags +faststart -vf scale='-2:min(ih\\,720)',fps=fps=25 \
+    -c:a aac -b:a 64k -ac 1 -f mp4 #{out.dir}/#{out.name}#{out.suffix.hd-quality} \
+  -c:v libx264 -crf 23 -maxrate 1200k -bufsize 1600k -profile:v high -level 4.0 -pix_fmt yuv420p \
+    -x264opts keyint=25:min-keyint=25:no-scenecut -movflags +faststart -vf scale='-2:min(ih\\,576)',fps=fps=25 \
+    -c:a aac -b:a 32k -ac 1 -f mp4 #{out.dir}/#{out.name}#{out.suffix.high-quality} \
+  -c:v libx264 -crf 25 -maxrate 800k -bufsize 800k -profile:v baseline -level 4.0 -pix_fmt yuv420p \
+    -x264opts keyint=25:min-keyint=25:no-scenecut -movflags +faststart -vf scale='-2:min(ih\\,360)',fps=fps=25 \
+    -c:a aac -b:a 20k -ac 1 -f mp4 #{out.dir}/#{out.name}#{out.suffix.medium-quality} \
+  -c:v libx264 -crf 28 -maxrate 200k -bufsize 400k -profile:v baseline -level 4.0 -pix_fmt yuv420p \
+    -x264opts keyint=25:min-keyint=25:no-scenecut -movflags +faststart -vf scale='-2:min(ih\\,288)',fps=fps=25 \
+    -c:a aac -b:a 16k -ac 1 -f mp4 #{out.dir}/#{out.name}#{out.suffix.low-quality}
+
+profile.parallel.http-full-hd.name = parallel video encoding - full-hd
+profile.parallel.http-full-hd.input = visual
+profile.parallel.http-full-hd.output = visual
+profile.parallel.http-full-hd.suffix.low-quality = -low.mp4
+profile.parallel.http-full-hd.suffix.medium-quality = -medium.mp4
+profile.parallel.http-full-hd.suffix.high-quality = -high.mp4
+profile.parallel.http-full-hd.suffix.hd-quality = -hd.mp4
+profile.parallel.http-full-hd.suffix.full-hd-quality = -full-hd.mp4
+profile.parallel.http-full-hd.ffmpeg.command = -i #{in.video.path} \
+  -c:v libx264 -crf 23 -maxrate 4000k -bufsize 4000k -profile:v high -level 4.0 -pix_fmt yuv420p \
+    -x264opts keyint=25:min-keyint=25:no-scenecut -movflags +faststart -vf scale='-2:min(ih\\,1080)',fps=fps=25 \
+    -c:a aac -b:a 96k -ac 1 -f mp4 #{out.dir}/#{out.name}#{out.suffix.full-hd-quality} \
+  -c:v libx264 -crf 23 -maxrate 1200k -bufsize 2400k -profile:v high -level 4.0 -pix_fmt yuv420p \
+    -x264opts keyint=25:min-keyint=25:no-scenecut -movflags +faststart -vf scale='-2:min(ih\\,720)',fps=fps=25 \
+    -c:a aac -b:a 64k -ac 1 -f mp4 #{out.dir}/#{out.name}#{out.suffix.hd-quality} \
+  -c:v libx264 -crf 23 -maxrate 1200k -bufsize 1600k -profile:v high -level 4.0 -pix_fmt yuv420p \
+    -x264opts keyint=25:min-keyint=25:no-scenecut -movflags +faststart -vf scale='-2:min(ih\\,576)',fps=fps=25 \
+    -c:a aac -b:a 32k -ac 1 -f mp4 #{out.dir}/#{out.name}#{out.suffix.high-quality} \
+  -c:v libx264 -crf 25 -maxrate 800k -bufsize 800k -profile:v baseline -level 4.0 -pix_fmt yuv420p \
+    -x264opts keyint=25:min-keyint=25:no-scenecut -movflags +faststart -vf scale='-2:min(ih\\,360)',fps=fps=25 \
+    -c:a aac -b:a 20k -ac 1 -f mp4 #{out.dir}/#{out.name}#{out.suffix.medium-quality} \
+  -c:v libx264 -crf 28 -maxrate 200k -bufsize 400k -profile:v baseline -level 4.0 -pix_fmt yuv420p \
+    -x264opts keyint=25:min-keyint=25:no-scenecut -movflags +faststart -vf scale='-2:min(ih\\,288)',fps=fps=25 \
+    -c:a aac -b:a 16k -ac 1 -f mp4 #{out.dir}/#{out.name}#{out.suffix.low-quality}
+
