--- a/7.x/de.unihalle/encoding/opencast-movies.properties
+++ b/7.x/de.unihalle/encoding/opencast-movies.properties
@@ -39,6 +39,20 @@ profile.av.work.output = audiovisual
 profile.av.work.suffix = -work.#{in.video.suffix}
 profile.av.work.ffmpeg.command = -i #{in.video.path} -shortest -c copy #{out.dir}/#{out.name}#{out.suffix}
 
+# de.unihalle:
+# Fix invalid CTTS invalid: unknown side data type 10 (24 bytes)
+# ffmpeg sometimes errors out with this message -- seems like
+# some nCast recorders produce or submit invalid videos or it's a
+# but in ffmpeg
+# - [mov,mp4,m4a,3gp,3g2,mj2 @ 0x558d00ef9de0] CTTS invalid
+# - unknown side data type 10 (24 bytes)
+# - Output file is empty, nothing was encoded (check -ss / -t / -frames parameters if used)
+profile.av.work-llz.name = LLZ: Re-encode audiovisual track
+profile.av.work-llz.input = stream
+profile.av.work-llz.output = audiovisual
+profile.av.work-llz.suffix = -work.mp4
+profile.av.work-llz.ffmpeg.command = -i #{in.video.path} -shortest -c:v libx264 -preset slow -r 25 -pix_fmt yuv420p -profile:v baseline -tune film -movflags faststart -c:a aac #{out.dir}/#{out.name}#{out.suffix}
+
 # Mux one audio and one video stream
 #   This command will take two files (video and audio) and mux the contained
 #   streams.  The container format used is the same as it was for the source
