--- a/7.x/de.unihalle/encoding/opencast-images.properties
+++ b/7.x/de.unihalle/encoding/opencast-images.properties
@@ -93,4 +93,4 @@ profile.editor.tracks.preview.input = visual
 profile.editor.tracks.preview.output = image
 profile.editor.tracks.preview.suffix = -preview.jpg
 profile.editor.tracks.preview.mimetype = image/jpeg
-profile.editor.tracks.preview.ffmpeg.command = -ss #{time} -i #{in.video.path} -r 1 -frames:v 1 -filter:v yadif,scale=320:-1 #{out.dir}/#{out.name}#{out.suffix}
+profile.editor.tracks.preview.ffmpeg.command = -ss #{time} -i #{in.video.path} -r 1 -frames:v 1 #{out.dir}/#{out.name}#{out.suffix}
