Add r/8.x de.unihalle customizations

--- a/8.x/de.unihalle/encoding/adaptive-streaming-movies.properties
+++ b/8.x/de.unihalle/encoding/adaptive-streaming-movies.properties
@@ -28,9 +28,30 @@ profile.adaptive-2160p.http.output = visual
 profile.adaptive-2160p.http.suffix = -preview.mp4
 profile.adaptive-2160p.http.ffmpeg.command = -i #{in.video.path} \
   -c:v libx264 -crf 23 -maxrate 10000k -bufsize 10000k -profile:v high -level 4.0 -pix_fmt yuv420p \
-  -x264opts keyint=25:min-keyint=25:no-scenecut -movflags +faststart \
-  -filter:v crop='floor(iw/2)*2:floor(ih/2)*2',scale='-2:min(ih\\,2160)',fps=fps=25 \
-  -c:a aac -b:a 96k -ac 1 \
+  -x264opts keyint=100:min-keyint=100:no-scenecut -movflags +faststart \
+  -filter:v crop='floor(iw/2)*2:floor(ih/2)*2',scale='-2:min(ih\\,2160)',fps=25 \
+  -c:a aac -b:a 128k -ac 1 \
+  -f mp4 #{out.dir}/#{out.name}#{out.suffix}
+
+# The loudnorm filter changes the sample rate to 128k in order to detect and avoid clipping.
+# Playback devices may have trouble playing 128k audio and there might be a
+# more memory required to store an 128k audio file vs. an 48k or an 44.1k
+# Source: https://groups.google.com/a/opencast.org/g/users/c/R40ZE3l_ay8/m/IgHKfKxnAAAJ
+# I=-23
+# Set the overall target loudness to -23 LUFS
+# LRA=1
+# Set the loudness range to 1 LU
+# tp=-1
+# Set the true peak limiter to a target of -1 dBFS to avoid clipping.
+profile.adaptive-2160p.http-loudnorm.name = encoding highest quality with 2160p for adaptive streaming and audio normalization
+profile.adaptive-2160p.http-loudnorm.input = visual
+profile.adaptive-2160p.http-loudnorm.output = visual
+profile.adaptive-2160p.http-loudnorm.suffix = -preview.mp4
+profile.adaptive-2160p.http-loudnorm.ffmpeg.command = -i #{in.video.path} \
+  -c:v libx264 -crf 23 -maxrate 10000k -bufsize 10000k -profile:v high -level 4.0 -pix_fmt yuv420p \
+  -x264opts keyint=100:min-keyint=100:no-scenecut -movflags +faststart \
+  -filter:v crop='floor(iw/2)*2:floor(ih/2)*2',scale='-2:min(ih\\,2160)',fps=25 \
+  -c:a aac -filter:a loudnorm=I=-23:LRA=1:dual_mono=true:tp=-1 -ar 48k -b:a 128k -ac 1 \
   -f mp4 #{out.dir}/#{out.name}#{out.suffix}
 
 profile.adaptive-1080p.http.name = encoding high quality with 1080p for adaptive streaming
@@ -40,7 +61,7 @@ profile.adaptive-1080p.http.suffix = -preview.mp4
 profile.adaptive-1080p.http.ffmpeg.command = -i #{in.video.path} \
   -c:v libx264 -crf 23 -maxrate 4000k -bufsize 8000k -profile:v high -level 4.0 -pix_fmt yuv420p \
   -x264opts keyint=25:min-keyint=25:no-scenecut -movflags +faststart \
-  -filter:v crop='floor(iw/2)*2:floor(ih/2)*2',scale='-2:min(ih\\,1080)',fps=fps=25 \
+  -filter:v crop='floor(iw/2)*2:floor(ih/2)*2',scale='-2:min(ih\\,1080)',fps=25 \
   -c:a aac -b:a 96k -ac 1 \
   -f mp4 #{out.dir}/#{out.name}#{out.suffix}
 
@@ -51,7 +72,7 @@ profile.adaptive-720p.http.suffix = -preview.mp4
 profile.adaptive-720p.http.ffmpeg.command = -i #{in.video.path} \
   -c:v libx264 -crf 23 -maxrate 1200k -bufsize 2400k -profile:v high -level 4.0 -pix_fmt yuv420p \
   -x264opts keyint=25:min-keyint=25:no-scenecut -movflags +faststart \
-  -filter:v crop='floor(iw/2)*2:floor(ih/2)*2',scale='-2:min(ih\\,720)',fps=fps=25 \
+  -filter:v crop='floor(iw/2)*2:floor(ih/2)*2',scale='-2:min(ih\\,720)',fps=25 \
   -c:a aac -b:a 64k -ac 1 \
   -f mp4 #{out.dir}/#{out.name}#{out.suffix}
 
@@ -62,7 +83,7 @@ profile.adaptive-480p.http.suffix = -preview.mp4
 profile.adaptive-480p.http.ffmpeg.command = -i #{in.video.path} \
   -c:v libx264 -crf 23 -maxrate 800k -bufsize 800k -profile:v high -level 4.0 -pix_fmt yuv420p \
   -x264opts keyint=25:min-keyint=25:no-scenecut -movflags +faststart \
-  -filter:v crop='floor(iw/2)*2:floor(ih/2)*2',scale='-2:min(ih\\,480)',fps=fps=25 \
+  -filter:v crop='floor(iw/2)*2:floor(ih/2)*2',scale='-2:min(ih\\,480)',fps=25 \
   -c:a aac -b:a 32k -ac 1 \
   -f mp4 #{out.dir}/#{out.name}#{out.suffix}
 
@@ -73,7 +94,7 @@ profile.adaptive-360p.http.suffix = -preview.mp4
 profile.adaptive-360p.http.ffmpeg.command = -i #{in.video.path} \
   -c:v libx264 -crf 30 -maxrate 600k -bufsize 600k -profile:v high -level 4.0 -pix_fmt yuv420p \
   -x264opts keyint=25:min-keyint=25:no-scenecut -movflags +faststart \
-  -filter:v crop='floor(iw/2)*2:floor(ih/2)*2',scale='-2:min(ih\\,360)',fps=fps=25 \
+  -filter:v crop='floor(iw/2)*2:floor(ih/2)*2',scale='-2:min(ih\\,360)',fps=25 \
   -c:a aac -b:a 32k -ac 1 \
   -f mp4 #{out.dir}/#{out.name}#{out.suffix}
 
@@ -85,56 +106,11 @@ profile.adaptive-parallel.http.suffix.720p-quality = -720p.mp4
 profile.adaptive-parallel.http.suffix.480p-quality = -480p.mp4
 profile.adaptive-parallel.http.ffmpeg.command = -i #{in.video.path} \
   -c:v libx264 -crf 23 -maxrate 4000k -bufsize 8000k -profile:v high -level 4.0 -pix_fmt yuv420p \
-    -x264opts keyint=25:min-keyint=25:no-scenecut -movflags +faststart \
-    -vf crop='floor(iw/2)*2:floor(ih/2)*2',scale='-2:min(ih\\,1080)',fps=fps=25 \
+    -x264opts keyint=25:min-keyint=25:no-scenecut -movflags +faststart -vf crop='floor(iw/2)*2:floor(ih/2)*2',scale='-2:min(ih\\,1080)',fps=25 \
     -c:a aac -b:a 96k -ac 1 -f mp4 #{out.dir}/#{out.name}#{out.suffix.1080p-quality} \
   -c:v libx264 -crf 23 -maxrate 1200k -bufsize 2400k -profile:v high -level 4.0 -pix_fmt yuv420p \
-    -x264opts keyint=25:min-keyint=25:no-scenecut -movflags +faststart \
-    -vf crop='floor(iw/2)*2:floor(ih/2)*2',scale='-2:min(ih\\,720)',fps=fps=25 \
+    -x264opts keyint=25:min-keyint=25:no-scenecut -movflags +faststart -vf crop='floor(iw/2)*2:floor(ih/2)*2',scale='-2:min(ih\\,720)',fps=25 \
     -c:a aac -b:a 64k -ac 1 -f mp4 #{out.dir}/#{out.name}#{out.suffix.720p-quality} \
   -c:v libx264 -crf 23 -maxrate 800k -bufsize 800k -profile:v high -level 4.0 -pix_fmt yuv420p \
-    -x264opts keyint=25:min-keyint=25:no-scenecut -movflags +faststart \
-    -vf crop='floor(iw/2)*2:floor(ih/2)*2',scale='-2:min(ih\\,480)',fps=fps=25 \
+    -x264opts keyint=25:min-keyint=25:no-scenecut -movflags +faststart -vf crop='floor(iw/2)*2:floor(ih/2)*2',scale='-2:min(ih\\,480)',fps=25 \
     -c:a aac -b:a 32k -ac 1 -f mp4 #{out.dir}/#{out.name}#{out.suffix.480p-quality}
-
-profile.studio.adaptive-parallel.http.name = parallel encoding of studio video in multiple qualities for adaptive streaming
-profile.studio.adaptive-parallel.http.input = visual
-profile.studio.adaptive-parallel.http.output = visual
-profile.studio.adaptive-parallel.http.suffix.2160p-quality = -2160p-quality.mp4
-profile.studio.adaptive-parallel.http.suffix.1440p-quality = -1440p-quality.mp4
-profile.studio.adaptive-parallel.http.suffix.1080p-quality = -1080p-quality.mp4
-profile.studio.adaptive-parallel.http.suffix.720p-quality = -720p-quality.mp4
-profile.studio.adaptive-parallel.http.suffix.360p-quality = -360p-quality.mp4
-profile.studio.adaptive-parallel.http.jobload = 4
-profile.studio.adaptive-parallel.http.ffmpeg.command.if-height-geq-1800 = \
-  -filter:v scale=w=3840:h=trunc(3840/dar/2)*2,setsar=1,fps=25 \
-    -c:v libx264 -tune film -pix_fmt yuv420p \
-    -x264opts keyint=25:min-keyint=25:no-scenecut -maxrate 14800k -bufsize 14800k \
-    -c:a aac -b:a 128k -ac 2 \
-    -movflags +faststart #{out.dir}/#{out.name}#{out.suffix.2160p-quality}
-profile.studio.adaptive-parallel.http.ffmpeg.command.if-height-geq-1260 = \
-  -filter:v scale=w=2560:h=trunc(2560/dar/2)*2,setsar=1,fps=25 \
-    -c:v libx264 -tune film -pix_fmt yuv420p \
-    -x264opts keyint=25:min-keyint=25:no-scenecut -maxrate 9800k -bufsize 9800k \
-    -c:a aac -b:a 128k -ac 2 \
-    -movflags +faststart #{out.dir}/#{out.name}#{out.suffix.1440p-quality}
-profile.studio.adaptive-parallel.http.ffmpeg.command.if-height-geq-900 = \
-  -filter:v scale=w=1920:h=trunc(1920/dar/2)*2,setsar=1,fps=25 \
-    -c:v libx264 -tune film -pix_fmt yuv420p \
-    -x264opts keyint=25:min-keyint=25:no-scenecut -maxrate 4800k -bufsize 4800k \
-    -c:a aac -b:a 128k -ac 2 \
-    -movflags +faststart #{out.dir}/#{out.name}#{out.suffix.1080p-quality}
-profile.studio.adaptive-parallel.http.ffmpeg.command = -i #{in.video.path} \
-  #{if-height-geq-1800} \
-  #{if-height-geq-1260} \
-  #{if-height-geq-900} \
-  -filter:v scale=w=1280:h=trunc(1280/dar/2)*2,setsar=1,fps=25 \
-    -c:v libx264 -tune film -pix_fmt yuv420p \
-    -x264opts keyint=25:min-keyint=25:no-scenecut -maxrate 2400k -bufsize 2400k \
-    -c:a aac -b:a 128k -ac 2 \
-    -movflags +faststart #{out.dir}/#{out.name}#{out.suffix.720p-quality} \
-  -filter:v scale=w=640:h=trunc(640/dar/2)*2,setsar=1,fps=25 \
-    -c:v libx264 -tune film -pix_fmt yuv420p \
-    -x264opts keyint=25:min-keyint=25:no-scenecut -maxrate 1200k -bufsize 1200k \
-    -c:a aac -b:a 64k -ac 1 \
-    -movflags +faststart #{out.dir}/#{out.name}#{out.suffix.360p-quality}
