--- a/8.x/de.unihalle/encoding/opencast-movies.properties
+++ b/8.x/de.unihalle/encoding/opencast-movies.properties
@@ -39,6 +39,36 @@ profile.av.prepared.output = audiovisual
 profile.av.prepared.suffix = -prepared.#{in.video.suffix}
 profile.av.prepared.ffmpeg.command = -i #{in.video.path} -shortest -c copy #{out.dir}/#{out.name}#{out.suffix}
 
+# de.unihalle:
+# Fix invalid CTTS invalid: unknown side data type 10 (24 bytes)
+# ffmpeg sometimes errors out with this message -- seems like
+# some nCast recorders produce or submit invalid videos or it's a
+# but in ffmpeg
+# - [mov,mp4,m4a,3gp,3g2,mj2 @ 0x558d00ef9de0] CTTS invalid
+# - unknown side data type 10 (24 bytes)
+# - Output file is empty, nothing was encoded (check -ss / -t / -frames parameters if used)
+profile.av.work-llz.name = LLZ: Re-encode audiovisual track
+profile.av.work-llz.input = stream
+profile.av.work-llz.output = audiovisual
+profile.av.work-llz.suffix = -work.mp4
+profile.av.work-llz.ffmpeg.command = -i #{in.video.path} -shortest -c:v libx264 -preset slow -r 25 -pix_fmt yuv420p -profile:v baseline -tune film -movflags faststart -c:a aac #{out.dir}/#{out.name}#{out.suffix}
+
+# de.unihalle:
+# +do dynamic audio-normalization
+# Fix invalid CTTS invalid: unknown side data type 10 (24 bytes)
+# ffmpeg sometimes errors out with this message -- seems like
+# some nCast recorders produce or submit invalid videos or it's a
+# but in ffmpeg
+# - [mov,mp4,m4a,3gp,3g2,mj2 @ 0x558d00ef9de0] CTTS invalid
+# - unknown side data type 10 (24 bytes)
+# - Output file is empty, nothing was encoded (check -ss / -t / -frames parameters if used)
+profile.av.work-normalize-llz.name = LLZ: Re-encode audiovisual track
+profile.av.work-normalize-llz.input = stream
+profile.av.work-normalize-llz.output = audiovisual
+profile.av.work-normalize-llz.suffix = -work.mp4
+profile.av.work-normalize-llz.ffmpeg.command = -i #{in.video.path} -shortest -c:v libx264 -preset slow -r 25 -pix_fmt yuv420p -profile:v baseline -tune film -movflags faststart -c:a aac -filter:a dynaudnorm=r=0.5:c=1 #{out.dir}/#{out.name}#{out.suffix}
+
+
 # Mux one audio and one video stream
 #   These commands will take two files (video and audio) and mux the contained
 #   streams.  The container format used is the same as it was for the source
@@ -60,7 +90,6 @@ profile.mux-av.work.input = stream
 profile.mux-av.work.output = visual
 profile.mux-av.work.suffix = -work.#{in.video.suffix}
 profile.mux-av.work.ffmpeg.command = -i #{in.video.path} -i #{in.audio.path} -shortest -c copy -map 0:v:0 -map 1:a:0 #{out.dir}/#{out.name}#{out.suffix}
-
 
 # Trim a stream
 #   This command will trim and input stream. Trimming will be fast, as no
@@ -125,7 +154,6 @@ profile.video-only.work.output = visual
 profile.video-only.work.suffix = -work.#{in.video.suffix}
 profile.video-only.work.ffmpeg.command = -i #{in.video.path} -c:v copy -an #{out.dir}/#{out.name}#{out.suffix}
 
-
 # Composite
 #   This profile is used for the composite workflow operation which puts
 #   several input videos on a single canvas. The new video is put into an
@@ -169,22 +197,6 @@ profile.import.silent.output = audio
 profile.import.silent.suffix = -silent-audio.mp4
 profile.import.silent.ffmpeg.command = -strict -2 -filter_complex aevalsrc=0:d=#{time} -c:a aac -b:a 8k #{out.dir}/#{out.name}#{out.suffix}
 
-# Transcode videos generated with opencast studio to cover some issues
-# The video resolution should be reduced to maximum of 1080p.
-# The video resolution should be dividable by 2 as the x264 encoder expect this.
-# the framerate should be fixed t0 25
-profile.scale.fhd.framerate.fix.name = Scale video to maximum resolution of FHD and set framerate to 25
-profile.scale.fhd.framerate.fix.input = stream
-profile.scale.fhd.framerate.fix.output = audiovisual
-profile.scale.fhd.framerate.fix.suffix = .mp4
-profile.scale.fhd.framerate.fix.ffmpeg.command = -i #{in.video.path} \
-  -max_muxing_queue_size 1000 \
-  -filter:v scale=w='trunc(min(max(1920\\,in_w)\\,in_w)/2)*2':'trunc(out_w/dar/2)*2',setsar=1,fps=25 \
-  -c:a aac -ab 128k \
-  -c:v libx264 -crf 21 \
-  -movflags +faststart \
-  #{out.dir}/#{out.name}#{out.suffix}
-
 # Editor
 #   This profile is used as a preview and work copy for the video editor.
 #   The gnonlin component in the gstreamer based video editor modules needs
@@ -196,4 +208,4 @@ profile.editor.work.input = audiovisual
 profile.editor.work.output = audiovisual
 profile.editor.work.suffix = -editor.mp4
 profile.editor.work.mimetype = video/mp4
-profile.editor.work.ffmpeg.command = -i #{in.video.path} -shortest -c:v libx264 -preset superfast -pix_fmt yuv420p -crf 18 -c:a aac -strict -2 -b:a 196k #{out.dir}/#{out.name}#{out.suffix}
+profile.editor.work.ffmpeg.command = -i #{in.video.path} -filter:v fps=25 -shortest -c:v libx264 -preset superfast -pix_fmt yuv420p -crf 18 -c:a aac -strict -2 -b:a 196k #{out.dir}/#{out.name}#{out.suffix}
