--- a/8.x/de.unihalle/encoding/opencast-images.properties
+++ b/8.x/de.unihalle/encoding/opencast-images.properties
@@ -59,7 +59,7 @@ profile.import.preview.output = image
 profile.import.preview.suffix = -image.jpg
 profile.import.preview.ffmpeg.command = -ss #{time} -i #{in.video.path} -r 1 -frames:v 1 #{out.dir}/#{out.name}#{out.suffix}
 
-# Extract last image for partial import operation
+# Extract image by video frame number for partial import operation
 profile.import.image-frame.name = Extract last image
 profile.import.image-frame.input = visual
 profile.import.image-frame.output = image
@@ -93,4 +93,4 @@ profile.editor.tracks.preview.input = visual
 profile.editor.tracks.preview.output = image
 profile.editor.tracks.preview.suffix = -preview.jpg
 profile.editor.tracks.preview.mimetype = image/jpeg
-profile.editor.tracks.preview.ffmpeg.command = -ss #{time} -i #{in.video.path} -r 1 -frames:v 1 -filter:v yadif,scale=320:-1 #{out.dir}/#{out.name}#{out.suffix}
+profile.editor.tracks.preview.ffmpeg.command = -ss #{time} -i #{in.video.path} -r 1 -frames:v 1 #{out.dir}/#{out.name}#{out.suffix}
